Create the Layout List Routes
Se ha creado la funcionalidad de listar cada una de las Rutas que se han guardado en la Base de Datos de Firebase, así como el muestreo de información relevante.

--- a/Beerute_F01/app/src/main/res/values/colors.xml
+++ b/Beerute_F01/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="Orange_7001_Firebase">#F47C00</color>
     <color name="Orange_7002_Firebase">#DA6C0B</color>
     <color name="Orange_70000_Firebase">#CF4200</color>
+    <color name="Orange_700001_Firebase">#B32A01</color>
+    <color name="Orange_700002_Firebase">#9C2603</color>
     <color name="Orange_70001_Firebase">#812A01</color>
     <color name="Blue_Firebase">#2C384A</color>
     <color name="Light_Blue_600_Firebase">#03A9F4</color>
