--- a/Beerute_F01/app/src/main/res/layout/activity_create.xml
+++ b/Beerute_F01/app/src/main/res/layout/activity_create.xml
@@ -36,6 +36,14 @@
             android:backgroundTint="@color/Orange_700_Firebase"
             android:text="Rutas Creadas"
             android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/clearRouteButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/Orange_70000_Firebase"
+            android:text="Limpiar"
+            android:textColor="@color/white" />
     </LinearLayout>
 
 </FrameLayout>
