--- a/Beerute_F01/app/src/main/res/layout/activity_main.xml
+++ b/Beerute_F01/app/src/main/res/layout/activity_main.xml
@@ -5,66 +5,101 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".ExploreActivity">
 
-    <LinearLayout
-        android:id="@+id/mainLayout"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Space
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="8dp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/landscape00"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            app:srcCompat="@mipmap/landscape00" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="8dp" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            <ImageView
+                android:id="@+id/landscape00"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                app:srcCompat="@mipmap/landscape00" />
 
-        <Button
-            android:id="@+id/exploreButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/Amber_700_Firebase"
-            android:text="Explorar"
-            android:textColor="@color/white" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
-        <Button
-            android:id="@+id/createButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/Orange_700_Firebase"
-            android:text="Crear Ruta"
-            android:textColor="@color/white" />
+            <Button
+                android:id="@+id/exploreButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/Amber_700_Firebase"
+                android:text="Explorar"
+                android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/profileButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/Orange_70001_Firebase"
-            android:text="Usuario"
-            android:textColor="@color/white" />
+            <Button
+                android:id="@+id/createButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/Orange_700_Firebase"
+                android:text="Crear Ruta"
+                android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/dbButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/Blue_Firebase"
-            android:text="Base de Datos"
-            android:textColor="@color/white" />
+            <Button
+                android:id="@+id/createdButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/Orange_70000_Firebase"
+                android:text="Rutas Creadas"
+                android:textColor="@color/white" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/IAHelpButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/Orange_700001_Firebase"
+                android:text="Ayuda IA"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/profileButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/Orange_70001_Firebase"
+                android:text="Usuario"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/dbButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/Blue_Firebase"
+                android:text="Base de Datos"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/stepButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/black"
+                android:text="Step Counter"
+                android:textColor="@color/white" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
