--- a/Beerute_F01/app/src/main/res/values/colors.xml
+++ b/Beerute_F01/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="Orange_700002_Firebase">#9C2603</color>
     <color name="Orange_70001_Firebase">#812A01</color>
     <color name="Blue_Firebase">#2C384A</color>
+    <color name="Blue_Firebase01">#092249</color>
     <color name="Light_Blue_600_Firebase">#03A9F4</color>
     <color name="Light_Blue_60001_Firebase">#017DB3</color>
     <color name="Deep_Orange_300_Firebase">#FF8A65</color>
