--- a/Beerute_F01/app/src/main/res/values/colors.xml
+++ b/Beerute_F01/app/src/main/res/values/colors.xml
@@ -11,8 +11,8 @@
     <color name="Amber_700_Firebase">#FFA000</color>
     <color name="Orange_700_Firebase">#F57C00</color>
     <color name="Orange_7001_Firebase">#F47C00</color>
-    <color name="Orange_7002_Firebase">#DA6C0B</color>
-    <color name="Orange_70000_Firebase">#CF4200</color>
+    <color name="Orange_7002_Firebase">#F44E00</color>
+    <color name="Orange_70000_Firebase">#DC3300</color>
     <color name="Orange_700001_Firebase">#B32A01</color>
     <color name="Orange_700002_Firebase">#9C2603</color>
     <color name="Orange_70001_Firebase">#812A01</color>
